# projects-archipelago

./: .gitignore  Cargo.toml
bevy_rendering-3/src/: main.rs
bevy_rendering-3/src/ch1_custom_material/: mod.rs
bevy_rendering-3/src/ch2_post_processing/: mod.rs
bevy_rendering-3/src/ch3_tilemap/: mod.rs  render.rs  tilemap.rs  tilemap_shader.wgsl
md/: notes.md
noise/: Cargo.toml
noise/src/: hash.wgsl  main.rs  noise.wgsl  noise_types.wgsl  render.rs
noise/src/noise_funcs/: perlin.wgsl  simplex.wgsl  value.wgsl  voronoi.wgsl
shadow/: Cargo.toml
shadow/assets/: hung.gltf  hung_mesh.gltf  scene.blend  scene.wgsl  shader.wgsl
shadow/src/: app.rs  main.rs  scene.rs
src/: main.rs
src/ch2_post_processing/: mod.rs  monochromer.wgsl
src/ch3_tilemap/: mod.rs  render.rs  tilemap.rs  tilemap_shader.wgsl
wgpu_renderer/: Cargo.toml
wgpu_renderer/macros/: Cargo.toml
wgpu_renderer/macros/src/: lib.rs  shader_data.rs
wgpu_renderer/src/: buffer.rs  lib.rs  render.rs  scene.rs
