[package]
name = "noise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", default-features = false, features = [
    "dynamic_linking",
    "bevy_sprite",
    "multi-threaded",
    "png",
    "x11",
    "wayland",
] }
bevy-inspector-egui = "0.24"
