[package]
name = "shadow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.16"
flume = "0.11"
glam = "0.27"
obj = "0.10"
png = "0.17.13"
pollster = "0.3"
wgpu = "0.20"
wgpu_renderer = { version = "0.1", path = "../wgpu_renderer" }
winit = "0.30"
