[package]
name = "wgpu_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.16", features = ["derive"] }
env_logger = "0.11"
flume = "0.11"
glam = { version = "0.27", features = ["bytemuck"] }
gltf = "1.4"
log = "0.4"
obj = "0.10.2"
png = "0.17.13"
pollster = "0.3"
wgpu = "0.20"
